# rokko

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build.conf  cmake-rokko.sh  cmatrix.h
benchmark/: CMakeLists.txt  diagonalize_time_frank_eigen_s.cpp  diagonalize_time_frank_eigen_sx.cpp  diagonalize_time_frank_elemental.cpp  diagonalize_time_frank_scalapack.cpp  frank_matrix.cpp  heisenberg_dense_mpi.cpp
benchmark/cxx/: CMakeLists.txt
benchmark/dense/: frank_mpi.cpp  heisenberg_dense_mpi.cpp
benchmark/no_rokko/: CMakeLists.txt
benchmark/python/: draw_time_dim.py  generate_benchmark_batch  generate_benchmark_batch_fx10  generate_benchmark_batch_lsf  generate_benchmark_batch_nobatch
benchmark/python_tool/: generate_benchmark_batch  generate_benchmark_batch_lsf
benchmark/sparse/: CMakeLists.txt  heisenberg_crs_mpi.cpp  heisenberg_matfree_mpi.cpp  heisenberg_mfree_mpi.cpp
benchmark/use_rokko/: CMakeLists.txt  frank_mpi.cpp  heisenberg_crs_mpi.cpp  heisenberg_ladder_crs_mpi.cpp
benchmark_anasazi/: CMakeLists.txt  heisenberg_crs_mpi.cpp  heisenberg_matfree_mpi.cpp
c-fortran_sample/: CMakeLists.txt  frank_function_pointer_c.c  frank_matrix.f90  frank_matrix_array_f.f90  frank_matrix_c.c  frank_matrix_c2.c  frank_matrix_f.f90  frank_matrix_function_f.f90  frank_matrix_wrapper_c.cpp  frank_matrix_wrapper_c.h  frank_matrix_wrapper_c2.cpp  frank_matrix_wrapper_c2.h  frank_matrix_wrapper_fortran.c  rokko_fortran.f90  timer_wrapper_c.cpp  timer_wrapper_c.h  timer_wrapper_c2.cpp  timer_wrapper_c2.h  timer_wrapper_fortran.c  wrapper_c  wrapper_c.cpp  wrapper_c.h  wrapper_c2.cpp  wrapper_c2.h  wrapper_fortran.c
developer/: CMakeLists.txt
developer/norokko_anasazi/: CMakeLists.txt  TraceMinDavidsonUserOpEx.cpp  heisenberg_crs_matrix_market_mpi.cpp  heisenberg_crs_mpi.cpp  heisenberg_mfree_mpi.cpp  laplacian_mfree_mpi.cpp  laplacian_mfree_parameters_mpi.cpp  mvtest.cpp  xyz_crs_mpi.cpp  xyz_matfree_mpi.cpp
developer/norokko_slepc/: CMakeLists.txt  ex1.cpp  frank_matfree.cpp  (+9 more)
example/: CMakeLists.txt
rokko/: CMakeLists.txt  Cblacs.h  alias_template_function.hpp  blacs.h  blacs.hpp  blacs_grid.hpp  blas.hpp  cblacs.h  ceigenexa.h  cmatrix.h  collective.F90  collective.f90  collective.h  collective.hpp  collective_c.cpp  collective_eigenK.hpp  command_line.F90  config.h.in  config.hpp  config.hpp.in  copy_string.cpp  copy_string.hpp  core.hpp  cpblas.h  cscalapack.h  declare_factory_instance.hpp  default_block_size.hpp  dense.h  distributed_crs_matrix.F90  distributed_crs_matrix.cpp  distributed_crs_matrix.h  distributed_crs_matrix.hpp  distributed_crs_matrix_c.cpp  distributed_matrix.F90  distributed_matrix.f90  distributed_matrix.h  distributed_matrix.hpp  distributed_matrix.hpp~  distributed_matrix_c.cpp  distributed_matrix_elemental.hpp  (+178 more)
rokko_c-fortran/: CMakeLists.txt  frank_matrix_wrapper_c.h  frank_matrix_wrapper_fortran.c  rokko_fortran.f90  timer_wrapper_c.cpp  timer_wrapper_c.h  timer_wrapper_fortran.c  wrapper_c.cpp  wrapper_c.h  wrapper_fortran.c
sample/: CMakeLists.txt  all_gather_dense_mpi.cpp  array_scatter_struct.cpp  array_scatter_struct2.cpp  array_scatter_struct3.cpp  diagonalize_frank_matrix.cpp  frank_dense_mpi.cpp  gather_dense_mpi.cpp  xyz_dense_mpi.cpp
sample_anasazi/: CMakeLists.txt  heisenberg_crs_mpi.cpp  heisenberg_matfree_mpi.cpp  heisenberg_matfree_mpi_krylov-schur.cpp  heisenberg_matrix_LOBPCG.cpp  heisenberg_product_parallel.cpp  mvtest.cpp  spin_hamiltonian_parallel_BlockKrylovSchur.cpp  spin_hamiltonian_parallel_BlockKrylovSchur_product.cpp  xyz_crs_mpi.cpp  xyz_matfree_mpi.cpp
sample_c/: CMakeLists.txt  frank.c  frank_function_pointer.c
sample_dense/: CMakeLists.txt  dsyev.c  dsyev.op  frank_dense.cpp  frank_dense_mpi.cpp  gather_dense_mpi.cpp  heisenberg_dense.cpp  heisenberg_dense_mpi.cpp  xyz.dat.in  xyz_dense.cpp  xyz_dense_mpi.cpp
sample_eigenK/: CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  diagonalize_eigen_s.cpp  diagonalize_eigen_sx.cpp  diagonalize_general.cpp  eigen_s_wrap.f  eigen_sx_wrap.f  eigen_wrap.f  frank_matrix_eigen_s_rokko.C  frank_matrix_eigen_s_rokko.C~  hamiltonian_matrix_eigen_s_rokko.C
sample_elemental/: CMakeLists.txt  Constructors.cpp  HermitianEigFromSequential.cpp  SymmetricEig.cpp  SymmetricEig_iterator.cpp  diagonalize_elemental.cpp  diagonalize_elemental_noeigvecs.cpp
sample_fortran/: CMakeLists.txt  frank.f90  frank_array.F90  frank_array.f90  frank_array_all_gather.F90  frank_array_all_gather.f90  frank_function.F90  frank_function.f90  frank_function_array.F90  frank_function_array.f90  set_distributed_matrix.F90  set_distributed_matrix.f90
sample_scalapack/: CMakeLists.txt  diagonalize.cpp  diagonalize2.cpp  diagonalize_frank_scalapack.cpp  diagonalize_scalapack.cpp  diagonalize_scalapack_noeigvecs.cpp  diagonalize_time_frank_scalapack.cpp  frank_matrix_scalapack_pdsyev_wrapping_gather5.C  frank_old.cpp
sample_slepc/: CMakeLists.txt  frank_matfree.cpp  heisenberg_1proc.cpp  heisenberg_crs_mpi.cpp  heisenberg_matfree_1proc.cpp  heisenberg_matfree_mpi.cpp  heisenberg_sparse_mpi.cpp  spin_hamiltonian_parallel.cpp  spin_hamiltonian_serial.cpp  xyz_crs_mpi.cpp  xyz_matfree_mpi.cpp
test/: CMakeLists.txt  diagonalize.cpp  distributed_matrix.cpp  dsyev.c  frank_function_pointer_mpi.cpp  frank_functor_mpi.cpp  gather.cpp  gather.op  generate_heisenberg.cpp  generate_xyz.cpp  grid.cpp  grid_1d_mpi.cpp  grid_mpi.cpp  heisenberg2.ip  localized2distributed_matrix.cpp  localized_matrix.cpp  localized_matrix_fixed_size.cpp  matrix_major.cpp  mpi_thread_multiple.cpp  parallel_dense_ev.cpp  parallel_dense_evs.cpp  parallel_dense_solvers.cpp  parallel_sparse_ev.cpp  parallel_sparse_solvers.cpp  parameters.cpp  product.cpp  scatter.cpp  serial_dense_ev.cpp  serial_dense_solvers.cpp  serial_solver.cpp  serial_solver_factory.cpp  solver.cpp  solver_c.c  solver_factory.cpp  sort_eigenpairs.cpp  spin_hamiltonian.cpp  spin_hamiltonian.op  spin_hamiltonian2.cpp  spin_hamiltonian_parallel_test.cpp  timer.cpp  (+2 more)
tool/: CMakeLists.txt  rokko_solvers.cpp
tutorial/: CMakeLists.txt
(+1271 files in other folders)
