if(BUILD_ANASAZI)
  include_directories(${ANASAZI_INCLUDE_DIR})
  set(TESTS  heisenberg_crs_mpi heisenberg_matfree_mpi) # heisenberg_matfree_mpi_krylov-schur)
  foreach(name ${TESTS})
    set(target_name benchmark_anasazi_diagonalize_${name})
    add_executable(${target_name} ${name}.cpp)
    set_target_properties(${target_name} PROPERTIES OUTPUT_NAME ${name})
    target_link_libraries(${target_name} rokko ${ANASAZI_LIBRARIES})
  endforeach(name)
endif(BUILD_ANASAZI)
