set(SAMPLE frank_matrix_c frank_function_pointer_c)

foreach(name ${SAMPLE})
  add_executable(${name} ${name}.c wrapper_c.cpp timer_wrapper_c.cpp frank_matrix_wrapper_c.cpp)
  target_link_libraries(${name} rokko ${ELEMENTAL_LIBRARIES} ${ELPA_LIB} ${SCALAPACK_LIB} ${MPI_CXX_LIBRARIES})
# add_rokko_test(${name})
endforeach(name)

set(SAMPLE frank_matrix_f frank_matrix_function_f frank_matrix_array_f)
foreach(name ${SAMPLE})
  add_executable(${name} ${name}.f90 wrapper_c.cpp timer_wrapper_c.cpp frank_matrix_wrapper_c.cpp wrapper_fortran.c timer_wrapper_fortran.c frank_matrix_wrapper_fortran.c rokko_fortran.f90)
  target_link_libraries(${name} rokko ${ELEMENTAL_LIBRARIES} ${ELPA_LIB} ${SCALAPACK_LIB})  # ${MPI_CXX_LIBRARIES})
  SET_TARGET_PROPERTIES( ${name} PROPERTIES LINKER_LANGUAGE Fortran )
# add_rokko_test(${name})                                                                                             
endforeach(name)
